# twinkle

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE-MIT  README.md  TODO  Todo.md
cli/driver/: CMakeLists.txt
docs/: GettingStarted.md  (+3 more)
src/: CMakeLists.txt  ast.cpp  ast.hpp  ast_adapted.hpp  codegen.cpp  codegen.hpp  format.hpp  main.cpp  main.cxx  parse.cpp  parse.hpp  pch.cpp  pch.hpp  utility.cpp  utility.hpp
src/ast/: CMakeLists.txt  ast.cpp  ast.cxx  ast.hpp  ast.hxx  ast_adapted.hpp  ast_adapted.hxx
src/codegen/: CMakeLists.txt  codegen.cpp  codegen.cxx  codegen.hpp  codegen.hxx
src/common/: context.hpp
src/compiler/include/ast/: ast.hpp  ast_adapted.hpp
src/compiler/include/codegen/: codegen.hpp  common.hpp  exception.hpp  expr.hpp  stmt.hpp  top_level.hpp
src/compiler/include/custard/ast/: ast.hpp  ast_adapted.hpp
src/compiler/include/custard/codegen/: codegen.hpp  common.hpp  exception.hpp  expr.hpp  stmt.hpp  top_level.hpp
src/compiler/include/custard/compile/: main.hpp
src/compiler/include/custard/jit/: jit.hpp
src/compiler/include/custard/option/: exception.hpp  parse.hpp
src/compiler/include/custard/parse/: exception.hpp  parser.hpp
src/compiler/include/custard/support/: exception.hpp  file.hpp  type.hpp  typedef.hpp  utils.hpp
src/compiler/include/custard/unicode/: unicode.hpp
src/compiler/include/emera/ast/: ast.hpp  ast_adapted.hpp
src/compiler/include/emera/codegen/: codegen.hpp  common.hpp  exception.hpp  expr.hpp  kind.hpp  stmt.hpp  top_level.hpp  type.hpp
src/compiler/include/emera/compile/: main.hpp
src/compiler/include/emera/jit/: jit.hpp
src/compiler/include/emera/mangle/: mangler.hpp
src/compiler/include/emera/option/: exception.hpp  option.hpp
src/compiler/include/emera/parse/: exception.hpp  parser.hpp
src/compiler/include/emera/pch/: pch.hpp
src/compiler/include/emera/support/: exception.hpp  file.hpp  kind.hpp  typedef.hpp  utils.hpp
src/compiler/include/emera/unicode/: unicode.hpp
src/compiler/include/jit/: jit.hpp
src/compiler/include/lapis/ast/: ast.hpp  ast_adapted.hpp
src/compiler/include/lapis/codegen/: codegen.hpp  common.hpp  exception.hpp  expr.hpp  stmt.hpp  top_level.hpp  type.hpp
src/compiler/include/lapis/compile/: main.hpp
src/compiler/include/lapis/jit/: jit.hpp
src/compiler/include/lapis/mangle/: mangler.hpp
src/compiler/include/lapis/option/: exception.hpp  option.hpp
src/compiler/include/lapis/parse/: exception.hpp  parser.hpp
src/compiler/include/lapis/pch/: pch.hpp
src/compiler/include/lapis/support/: exception.hpp  file.hpp  kind.hpp  typedef.hpp  utils.hpp
src/compiler/include/lapis/unicode/: unicode.hpp
src/compiler/include/maple/ast/: ast.hpp  ast_adapted.hpp
src/compiler/include/maple/codegen/: codegen.hpp  common.hpp  exception.hpp  expr.hpp  stmt.hpp  top_level.hpp  type.hpp
src/compiler/include/maple/compile/: main.hpp
src/compiler/include/maple/jit/: jit.hpp
src/compiler/include/maple/mangle/: mangler.hpp
src/compiler/include/maple/option/: exception.hpp  parse.hpp
src/compiler/include/maple/parse/: exception.hpp  parser.hpp
src/compiler/include/maple/pch/: pch.hpp
src/compiler/include/option/: exception.hpp  parse.hpp
src/compiler/include/parse/: exception.hpp  parser.hpp
src/compiler/include/pch/: pch.hpp
src/compiler/include/support/: exception.hpp  file.hpp  format.hpp  type.hpp  typedef.hpp  utils.hpp
src/compiler/include/unicode/: unicode.hpp
src/compiler/src/: CMakeLists.txt
src/compiler/src/codegen/: CMakeLists.txt  codegen.cpp  common.cpp  expr.cpp  stmt.cpp  top_level.cpp  type.cpp
src/compiler/src/compile/: compile.cpp  main.cpp
src/compiler/src/jit/: jit.cpp
src/compiler/src/mangle/: CMakeLists.txt  mangler.cpp
src/compiler/src/option/: CMakeLists.txt  option.cpp  parse.cpp
src/compiler/src/parse/: parser.cpp
src/compiler/src/pch/: pch.cpp
src/compiler/src/support/: CMakeLists.txt  file.cpp  kind.cpp  type.cpp  utils.cpp
src/compiler/src/unicode/: unicode.cpp
src/driver/: CMakeLists.txt  cmd.cpp  cmd.hpp  main.cpp
src/jit/: CMakeLists.txt  jit.cpp  jit.cxx  jit.hpp  jit.hxx
src/parse/: CMakeLists.txt  enum.hpp  id.hpp  id.hxx  parse.cpp  parse.cxx  parse.hpp  parse.hxx
src/pch/: pch.cxx  pch.hpp  pch.hxx
src/util/: CMakeLists.txt  format.hpp  util.cpp  util.hpp
src/utils/: CMakeLists.txt  format.hxx  typedef.hpp  typedef.hxx  util.cpp  util.cxx  util.hpp  util.hxx
test/: CMakeLists.txt  blackbox_test.cpp  test.cpp  test.sh
test/cases/: access_to_methods_of_member_variables  access_to_signed_member  access_to_unsigned_member  addition  addition_assignment  address_of  array_literal  array_type  assign_to_member  assignment  assignment2  bin_octal_hex_literal  bitwise_and_or  bitwise_and_or_negative  bitwise_shift  bitwise_shift2  block  block_expr  boolean_literal  break1  break2  break3  call_method_of_rvalue  call_namespaced_function  character_literal  class_declaration  class_definition  class_forward_declaration  class_in_class  class_methods_call  class_methods_def  class_template  class_template_type  class_template_type2  class_type1  class_type2  class_with_class_type_variables_access  class_within_class  comment  constructor_call_of_same_class_as_self  (+183 more)
test/cases/import_classes/: main  main.rs  sample.rs
test/cases/import_function/: a  b  main
test/cases/import_template_classes/: main  sample
test/testcase/: addition  division  equal_to  if2  if3  less_than_or_equal_to  modulo  multiplication  not_equal_to  return  unary_minus  variable
test/tester/: CMakeLists.txt  expect.cpp  expect.hpp  expectation.cpp  test.cpp  tester.cpp
tests/: CMakeLists.txt  test.cpp
tests/testcase/: address_of  break1  break2  break3  character_literal  continue1  continue3  division_assignment  escape_characters  expression_statement  for1  for4  function_linkage  greater_than  greater_than_or_equal_to  if1  indirection_assignment  init_time_type_inference  multiplication_assignment  parameter1  pointer_types  scalar_types  sign  subtraction  variable_arguments
(+208 files in other folders)
